--- a/package.json
+++ b/package.json
@@ -12,11 +12,29 @@
   "author": "",
   "license": "MIT",
   "devDependencies": {
+    "@nomicfoundation/hardhat-chai-matchers": "^1.0.6",
+    "@nomicfoundation/hardhat-network-helpers": "^1.1.2",
     "@nomicfoundation/hardhat-toolbox": "^2.0.0",
+    "@nomiclabs/hardhat-ethers": "^2.2.3",
+    "@nomiclabs/hardhat-etherscan": "^3.1.8",
+    "@typechain/ethers-v5": "^11.1.2",
+    "@typechain/hardhat": "^9.1.0",
+    "@types/chai": "^4.3.20",
+    "@types/mocha": "^10.0.10",
+    "@types/node": "^25.0.3",
+    "chai": "^4.5.0",
+    "dotenv": "^16.0.0",
+    "ethers": "^5.8.0",
     "hardhat": "^2.19.0",
-    "dotenv": "^16.0.0"
+    "hardhat-gas-reporter": "^1.0.10",
+    "solidity-coverage": "^0.8.17",
+    "ts-node": "^10.9.2",
+    "typechain": "^8.3.2",
+    "typescript": "^5.9.3"
   },
   "dependencies": {
-    "@openzeppelin/contracts": "^5.0.0"
+    "@account-abstraction/contracts": "^0.8.0",
+    "@openzeppelin/contracts": "^5.0.0",
+    "@safe-global/safe-contracts": "^1.4.1-2"
   }
 }
